--- a/.gitignore
+++ b/.gitignore
@@ -11,38 +11,13 @@
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 
-# Directories #
-/build/
-/bin/
-target/
-# OS Files #
-.DS_Store
-*.class
-# Package Files #
+*target*
 *.jar
 *.war
 *.ear
-*.db
-######################
-# Windows
-######################
-# Windows image file caches
-Thumbs.db
-# Folder config file
-Desktop.ini
-######################
-# OSX
-######################
-.DS_Store
-.svn
-# Thumbnails
-._*
-# Files that might appear on external disk
-.Spotlight-V100
-.Trashes
-######################
-# Eclipse
-######################
+*.class
+
+# eclipse specific git ignore
 *.pydevproject
 .metadata
 bin/**
@@ -55,12 +30,9 @@ tmp/**/*
 local.properties
 .settings/
 .loadpath
-/src/main/resources/rebel.xml
+
 # External tool builders
 .externalToolBuilders/
+
 # Locally stored "Eclipse launch configurations"
 *.launch
-# CDT-specific
-.cproject
-# PDT-specific
-.buildpath
